Update readme and website to 0.10